--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!doctype html>
+﻿<!doctype html>
 <html class="no-js" lang="">
     <head>
         <meta charset="utf-8">
@@ -53,12 +53,12 @@
                     </header>
                     <!-- BEGIN STUDENT INFO TEMPLATE -->
                     <section class="student-info">
-                        <h2>Your Name</h2>
-                        <p><b>GitHub username:</b> <a href="https://github.com/yourusername">yourusername</a></p>
+                        <h2>Juan Granda</h2>
+                        <p><b>username</b> <a href="https://github.com/juangranda">juangranda</a></p>
                         <p><b>Hobbies:</b>
                             <ul>
-                                <li>Racquetball</li>
-                                <li>Collecting spores, molds, and fungus</li>
+                                <li>Drums</li>
+                                <li>Sound Engineer</li>
                             </ul>
                         </p>
                     </section>
