--- a/index.html
+++ b/index.html
@@ -62,6 +62,8 @@
                             </ul>
                         </p>
                     </section>
+                    <img src="http://www.drummercafe.com/images/stories/artists/remobelli/RemoBelli_BigBassDrum_1961.jpg" alt="Mountain View">
+                    
                     <!-- END STUDENT INFO TEMPLATE -->
                 </article>
 
