Name, hobbies, picture

--- a/index.html
+++ b/index.html
@@ -53,13 +53,14 @@
                     </header>
                     <!-- BEGIN STUDENT INFO TEMPLATE -->
                     <section class="student-info">
-                        <h2>Your Name</h2>
-                        <p><b>GitHub username:</b> <a href="https://github.com/yourusername">yourusername</a></p>
+                        <h2>Juan Granda</h2>
+                        <p><b>GitHub username:</b> <a href="https://github.com/juangranda">juangranda</a></p>
                         <p><b>Hobbies:</b>
                             <ul>
-                                <li>Racquetball</li>
-                                <li>Collecting spores, molds, and fungus</li>
+                                <li>Drums</li>
+                                <li>Audio</li>
                             </ul>
+                            <img src="http://www.drummercafe.com/images/stories/artists/remobelli/RemoBelli_BigBassDrum_1961.jpg" alt="Mountain View" width="300">
                         </p>
                     </section>
                     <!-- END STUDENT INFO TEMPLATE -->
