New name and hobbies

--- a/index.html
+++ b/index.html
@@ -53,12 +53,12 @@
                     </header>
                     <!-- BEGIN STUDENT INFO TEMPLATE -->
                     <section class="student-info">
-                        <h2>Karn Sharma</h2>
-                        <p><b>GitHub username:</b> <a href="https://github.com/yourusername">ksharma024/a></p>
+                        <h2>Juan Granda</h2>
+                        <p><b>GitHub username:</b> <a href="https://github.com/juangranda">juangranda</a></p>
                         <p><b>Hobbies:</b>
                             <ul>
-                                <li>Basketball
-                                <li>Paintball, Skydiving
+                                <li>Drums</li>
+                                <li>Audio</li>
                             </ul>
                         </p>
                     </section>
