fixed template plus added my info

--- a/index.html
+++ b/index.html
@@ -53,9 +53,22 @@
                     </header>
                     <!-- BEGIN STUDENT INFO TEMPLATE -->
                     <section class="student-info">
+                        <h2>Karn Sharma</h2>
+                        <p><b>GitHub username:</b> <a href="https://github.com/yourusername">ksharma024/a></p>
+                        <p>
+                            <b>Hobbies:</b>
+                            <ul>
+                                <li>Basketball
+                                <li>Paintball, Skydiving
+                            </ul>
+                        </p>
+                    </section>
+                    <!-- END STUDENT INFO TEMPLATE -->
+                    <section class="student-info">
                         <h2>Juan Granda</h2>
                         <p><b>GitHub username:</b> <a href="https://github.com/juangranda">juangranda</a></p>
-                        <p><b>Hobbies:</b>
+                        <p>
+                            <b>Hobbies:</b>
                             <ul>
                                 <li>Drums</li>
                                 <li>Audio</li>
@@ -63,7 +76,6 @@
                             <img src="http://www.drummercafe.com/images/stories/artists/remobelli/RemoBelli_BigBassDrum_1961.jpg" alt="Mountain View" width="300">
                         </p>
                     </section>
-                    <!-- END STUDENT INFO TEMPLATE -->
                 </article>
 
             </div> <!-- #main -->
