--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
                     <!-- BEGIN STUDENT INFO TEMPLATE -->
                     <section class="student-info">
                         <h2>Karn Sharma</h2>
-                        <p><b>GitHub username:</b> <a href="https://github.com/yourusername">ksharma024/a></p>
+                        <p><b>GitHub username:</b> <a href="https://github.com/yourusername">ksharma024</a></p>
                         <p>
                             <b>Hobbies:</b>
                             <ul>
